--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Luis Eduardo Castellanos Blog Page"
     />
+    <meta property="og:title" content="Luis Eduardo Castellanos' Page" />
+    <meta property="og:description" content="Personal Page and Blog of Luis Castellanos" />
+    <meta property="og:image" content="https://bluis.s3.amazonaws.com/me.jpeg" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://luiseduardocastellanos.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Luis Eduardo Castellanos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
